# LP-Prospect-Enrichment

./: .gitignore  DESIGN.md  README.md  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  main.py
backend/app/ai/: claude_client.py  gemini_client.py  tavily_client.py
backend/app/ai/prompts/: deep_research_prompt.py  extraction_prompt.py  scoring_prompt.py
backend/app/api/v1/: costs.py  dashboard.py  export.py  ingest.py  pipeline.py  prospects.py  router.py
backend/app/core/: database.py  rate_limiter.py  retry.py
backend/app/models/: __init__.py  api_cost_log.py  base.py  contact.py  enrichment.py  organization.py  pipeline_run.py  score.py  validation_flag.py
backend/app/schemas/: common.py
backend/app/services/: cost_service.py  enrichment_service.py  ingest_service.py  pipeline_service.py  scoring_service.py  validation_service.py
data/: challenge_contacts.csv  challenge_contacts_10.csv
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: layout.tsx
frontend/src/app/costs/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/import/: page.tsx
frontend/src/app/prospects/: page.tsx
frontend/src/app/prospects/[id]/: page.tsx
frontend/src/components/layout/: Sidebar.tsx
frontend/src/components/shared/: ScoreBar.tsx  TierBadge.tsx
frontend/src/lib/: api.ts  constants.ts  types.ts  utils.ts
